--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -224,10 +224,12 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.1
-      statusEffects:
-      - statusEffect: StatusEffectPainkillersNegligibleBicaridine
-      # End Offbrand
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectPainkillersNegligibleBicaridine
+      # End Offbrand
       - !type:EvenHealthChange
         damage:
           Brute: -0.75 # Offbrand
@@ -290,16 +292,21 @@
   metabolisms:
     Medicine:
       # Begin Offbrand
-      statusEffects:
-      - statusEffect: StatusEffectMinorOxygenationCryoxadone
-        conditions:
-        - !type:TemperatureCondition
-          max: 213.0
-      - statusEffect: StatusEffectHeartStabilizationCryoxadone
-        conditions:
-        - !type:TemperatureCondition
-          max: 213.0
       effects:
+        - !type:ModifyStatusEffect
+          type: Set
+          time: 1.5
+          effectProto: StatusEffectMinorOxygenationCryoxadone
+          conditions:
+          - !type:TemperatureCondition
+            max: 213.0
+        - !type:ModifyStatusEffect
+          type: Set
+          time: 1.5
+          effectProto: StatusEffectHeartStabilizationCryoxadone
+          conditions:
+          - !type:TemperatureCondition
+            max: 213.0
         - !type:ModifyHeartDamage
           amount: -0.3
           conditions:
@@ -442,10 +449,12 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.1
-      statusEffects:
-      - statusEffect: StatusEffectMinorOxygenationDexalin
-      # End Offbrand
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectMinorOxygenationDexalin
+      # End Offbrand
       - !type:HealthChange
         damage:
           types:
@@ -484,10 +493,12 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.1
-      statusEffects:
-      - statusEffect: StatusEffectMajorOxygenationDexalinPlus
-      # End Offbrand
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectMajorOxygenationDexalinPlus
+      # End Offbrand
       - !type:HealthChange
         damage:
           types:
@@ -534,9 +545,11 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.25
-      statusEffects:
-      - statusEffect: StatusEffectHeartStrainEpinephrine
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStrainEpinephrine
       - !type:StartHeart
         probability: 0.03
       # End Offbrand
@@ -754,11 +767,16 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.05
-      statusEffects:
-      - statusEffect: StatusEffectHeartStabilizationInaprovaline
-      - statusEffect: StatusEffectBrainStabilizationInaprovaline
-      # End Offbrand
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStabilizationInaprovaline
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectBrainStabilizationInaprovaline
+      # End Offbrand
       - !type:HealthChange
         conditions:
           # they gotta be in crit first
@@ -1056,10 +1074,12 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.2
-      statusEffects:
-      - statusEffect: StatusEffectMinorOxygenationPolypyryliumOligomers
-      # End Offbrand
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectMinorOxygenationPolypyryliumOligomers
+      # End Offbrand
       - !type:HealthChange
 # WL species start
         conditions:
@@ -2181,9 +2201,11 @@
     Medicine:
       # Begin Offbrand
       metabolismRate: 0.05
-      statusEffects:
-      - statusEffect: StatusEffectBrainHealingMannitol
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectBrainHealingMannitol
       - !type:Drunk
         boozePower: 1
       - !type:Jitter
