--- a/Resources/Prototypes/Reagents/narcotics.yml
+++ b/Resources/Prototypes/Reagents/narcotics.yml
@@ -31,9 +31,11 @@
             Poison: 2 # this is added to the base damage of the meth.
             Asphyxiation: 2
     Narcotic:
-      statusEffects: # Offbrand
-      - statusEffect: StatusEffectHeartStrainDesoxyephedrine
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStrainDesoxyephedrine
       - !type:MovementSpeedModifier
         walkSpeedModifier: 1.35
         sprintSpeedModifier: 1.35
@@ -108,9 +110,11 @@
   meltingPoint: 36.0
   metabolisms:
     Narcotic:
-      statusEffects: # Offbrand
-      - statusEffect: StatusEffectHeartStrainEphedrine
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStrainEphedrine
       - !type:MovementSpeedModifier
         walkSpeedModifier: 1.25
         sprintSpeedModifier: 1.25
@@ -187,10 +191,12 @@
   meltingPoint: 170.0
   metabolisms:
     Narcotic:
-      statusEffects: # Offbrand
-      - statusEffect: StatusEffectHeartStrainHyperzine
       metabolismRate: 1.0
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStrainHyperzine
       - !type:MovementSpeedModifier
 # WL species start
         conditions:
@@ -284,9 +290,11 @@
     amount: -1
   metabolisms:
     Narcotic:
-      statusEffects: # Offbrand
-      - statusEffect: StatusEffectHeartStabilizationTHC
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStabilizationTHC
       - !type:ModifyStatusEffect
         effectProto: StatusEffectSeeingRainbow
         time: 16
@@ -312,9 +320,11 @@
     amount: -5
   metabolisms: # Offbrand
     Narcotic:
-      statusEffects:
-      - statusEffect: StatusEffectHeartStrainNicotine
       effects:
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectHeartStrainNicotine
       - !type:ModifyLungDamage
         amount: 0.25
 
@@ -451,9 +461,11 @@
   meltingPoint: 128.0
   metabolisms:
     Narcotic:
-      statusEffects: # Offbrand
-      - statusEffect: StatusEffectPainSuppressionNocturine
       effects: # It would be nice to have speech slurred or mumbly, but accents are a bit iffy atm. Same for distortion effects.
+      - !type:ModifyStatusEffect
+        type: Set
+        time: 1.5
+        effectProto: StatusEffectPainSuppressionNocturine
       - !type:MovementSpeedModifier
         walkSpeedModifier: 0.65
         sprintSpeedModifier: 0.65
