--- a/Resources/Prototypes/Reagents/botany.yml
+++ b/Resources/Prototypes/Reagents/botany.yml
@@ -128,8 +128,8 @@
       statusEffects:
       - statusEffect: StatusEffectPainkillersNegligibleRobustHarvest
         conditions:
-        - !type:OrganType
-          type: Plant
+        - !type:MetabolizerTypeCondition
+          type: [Plant]
       effects:
       - !type:HealthChange
         damage:
@@ -163,7 +163,7 @@
         conditions:
           - !type:MetabolizerTypeCondition
             type: [Plant]
-          - !type:MetaboliteThreshold # Offbrand
+          - !type:MetaboliteThresholdCondition # Offbrand
             reagent: RobustHarvest
             min: 80
 
@@ -193,20 +193,22 @@
         damage:
           types:
             Poison: 2
-      - !type:CreateEntityReactionEffect
+      - !type:SpawnEntity
         entity: MobDionaNymph
         conditions:
-        - !type:OrganType
-          type: Plant
-        - !type:ReagentThreshold
+        - !type:MetabolizerTypeCondition
+          type: [Plant]
+        - !type:ReagentCondition
+          reagent: Sedin
           min: 40
       - !type:AdjustReagent
         reagent: Sedin
         amount: -20
         conditions:
-        - !type:OrganType
-          type: Plant
-        - !type:ReagentThreshold
+        - !type:MetabolizerTypeCondition
+          type: [Plant]
+        - !type:ReagentCondition
+          reagent: Sedin
           min: 40
   # End Offbrand
 
@@ -258,14 +260,14 @@
             Caustic: 1
       # Begin Offbrand
         conditions:
-        - !type:OrganType
-          type: Plant
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [Plant]
+          inverted: true
       - !type:SatiateHunger
         factor: 1
         conditions:
-        - !type:OrganType
-          type: Plant
+        - !type:MetabolizerTypeCondition
+          type: [Plant]
       # End Offbrand
     Gas:
       effects:
@@ -353,9 +355,9 @@
       # Begin Offbrand
             Caustic: 0.5
         conditions:
-        - !type:OrganType
-          type: Plant
-          shouldHave: false
+        - !type:MetabolizerTypeCondition
+          type: [ Plant ]
+          inverted: true
       - !type:HealthChange
         damage:
           types:
@@ -363,6 +365,6 @@
             Cold: -0.5
             Shock: -0.5
         conditions:
-        - !type:OrganType
-          type: Plant
+        - !type:MetabolizerTypeCondition
+          type: [ Plant ]
       # End Offbrand
