--- a/Resources/Prototypes/_Offbrand/reagents.yml
+++ b/Resources/Prototypes/_Offbrand/reagents.yml
@@ -12,20 +12,22 @@
       statusEffects:
       - statusEffect: StatusEffectPainkillersMildParacetamol
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Tramadol
           max: 1
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Oxycodone
           max: 1
       - statusEffect: StatusEffectPainkillersMildParacetamolOverdose
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Paracetamol
           min: 10
       effects:
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Paracetamol
           min: 10
         damage:
           types:
@@ -46,32 +48,35 @@
       - statusEffect: StatusEffectPainkillersTramadol
       - statusEffect: StatusEffectPainkillersTramadolOverdose
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Tramadol
           min: 15
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Oxycodone
           max: 1
       - statusEffect: StatusEffectHeartStrainTramadolAlcohol
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Ethanol
           min: 1
       effects:
       - !type:Drunk
         boozePower: 1
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Tramadol
           min: 15.5
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Tramadol
           min: 25
         damage:
           types:
             Asphyxiation: 0.5
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Ethanol
           min: 1
         damage:
@@ -93,29 +98,32 @@
       - statusEffect: StatusEffectPainkillersStrongOxycodone
       - statusEffect: StatusEffectPainkillersStrongOxycodoneOverdose
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Oxycodone
           min: 10
       - statusEffect: StatusEffectHeartStrainOxycodoneAlcohol
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Ethanol
           min: 1
       effects:
       - !type:Drunk
         boozePower: 2
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Oxycodone
           min: 10
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Oxycodone
           min: 15
         damage:
           types:
             Asphyxiation: 0.5
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
           reagent: Ethanol
           min: 1
         damage:
@@ -148,7 +156,8 @@
       - !type:ModifyBloodLevel
         amount: 6
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Sanguine
           max: 1
 
 - type: reagent
@@ -167,27 +176,30 @@
       - !type:ModifyHeartDamage
         amount: -0.4
         conditions:
-        - !type:HeartDamage
+        - !type:HeartDamageCondition
           max: 50
       - !type:ModifyLungDamage
         amount: -0.4
         conditions:
-        - !type:LungDamage
+        - !type:LungDamageCondition
           max: 50
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Peridaxon
           min: 5.5
         damage:
           types:
             Poison: 0.05
       - !type:Jitter
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Peridaxon
           min: 5.5
-      - !type:ChemVomit
+      - !type:Vomit
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Peridaxon
           min: 5.5
         probability: 0.1
 
@@ -204,26 +216,26 @@
       statusEffects:
       - statusEffect: StatusEffectMajorOxygenationCloneoxadone
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 170.0
       - statusEffect: StatusEffectHeartStabilizationCloneoxadone
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 170.0
       effects:
       - !type:ModifyHeartDamage
         amount: -0.6
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 170.0
       - !type:ModifyLungDamage
         amount: -0.6
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 170.0
       - !type:EvenHealthChange
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 170.0
         damage:
           Airloss: -12
@@ -247,17 +259,20 @@
       - !type:SatiateThirst
         factor: 3
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: SalineGlucose
           max: 1
       - !type:ModifyBloodLevel
         amount: 0.5
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: SalineGlucose
           max: 1
       - !type:SatiateHunger
         factor: 0.5
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: SalineGlucose
           max: 1
       - !type:HealthChange
         damage:
@@ -269,7 +284,8 @@
             Shock: -0.6
             Cold: -0.6
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: SalineGlucose
           max: 1
 
 - type: reagent
@@ -306,13 +322,15 @@
       - !type:RemoveStatusEffect
         effectProto: WoundFracture
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Osseous
           min: 5
       - !type:AdjustReagent
         reagent: Osseous
         amount: -5
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Osseous
           min: 5
 
 - type: reagent
@@ -332,8 +350,8 @@
             Asphyxiation: -4
             Blunt: 1
         conditions:
-        - !type:TotalGroupDamage
-          group: Airloss
+        - !type:DamageGroupCondition
+          damageGroup: Airloss
           min: 4
       - !type:HealthChange
         damage:
@@ -341,10 +359,11 @@
             Asphyxiation: -4
             Blunt: 1
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Convermol
           min: 10
-        - !type:TotalGroupDamage
-          group: Airloss
+        - !type:DamageGroupCondition
+          damageGroup: Airloss
           min: 4
       - !type:ModifyLungDamage
         amount: 0.05
@@ -363,43 +382,47 @@
       statusEffects:
       - statusEffect: StatusEffectPainkillersSalicylicAcid
         conditions:
-        - !type:TotalGroupDamage
-          group: Brute
+        - !type:DamageGroupCondition
+          damageGroup: Brute
           min: 35
       effects:
       - !type:EvenHealthChange
         damage:
           Brute: -2
         conditions:
-        - !type:TotalGroupDamage
-          group: Brute
+        - !type:DamageGroupCondition
+          damageGroup: Brute
           min: 35
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: SalicylicAcid
           max: 15
       - !type:EvenHealthChange
         damage:
           Brute: -2
           Burn: 2
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: SalicylicAcid
           min: 15
       - !type:EvenHealthChange
         damage:
           Brute: -0.5
         conditions:
-        - !type:TotalGroupDamage
-          group: Brute
+        - !type:DamageGroupCondition
+          damageGroup: Brute
           max: 35
       - !type:RemoveStatusEffect
         effectProto: WoundBoneDeath
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: SalicylicAcid
           min: 50
       - !type:EvenHealthChange
         damage:
           Burn: 1
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: SalicylicAcid
           min: 35
 
 - type: reagent
@@ -416,41 +439,45 @@
       statusEffects:
       - statusEffect: StatusEffectPainkillersOxandrolone
         conditions:
-        - !type:TotalGroupDamage
-          group: Burn
+        - !type:DamageGroupCondition
+          damageGroup: Burn
           min: 35
       effects:
       - !type:EvenHealthChange
         damage:
           Burn: -3
         conditions:
-        - !type:TotalGroupDamage
-          group: Burn
+        - !type:DamageGroupCondition
+          damageGroup: Burn
           min: 35
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Oxandrolone
           max: 15
       - !type:EvenHealthChange
         damage:
           Burn: -3
           Brute: 3
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Oxandrolone
           min: 15
       - !type:EvenHealthChange
         damage:
           Burn: -0.5
         conditions:
-        - !type:TotalGroupDamage
-          group: Burn
+        - !type:DamageGroupCondition
+          damageGroup: Burn
           max: 35
       - !type:RemoveStatusEffect
         effectProto: WoundHusking
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Oxandrolone
           min: 50
       - !type:EvenHealthChange
         damage:
           Brute: 1
         conditions:
-        - !type:MetaboliteThreshold
+        - !type:MetaboliteThresholdCondition
+          reagent: Oxandrolone
           min: 35
