--- a/Resources/Prototypes/Roles/Jobs/Civilian/assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/assistant.yml
@@ -18,7 +18,7 @@
   supervisors: job-supervisors-everyone
 #  access: # WL-Changes
 #  - Maintenance
-  bonusSkillPoints: 16 # WL-Skills / Why? / bcs если какой-то там пассажир смог попасть на станцию, то наверное в каких-то навыках он и выдается и так как подвязать конкретные навыки ему низя, то остается дать ему бОльшую вариативность в собственном выборе навыков :3
+  bonusSkillPoints: 25 # WL-Skills 
 
 - type: startingGear
   id: PassengerGear
