--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -2084,7 +2084,7 @@
   physicalDesc: reagent-physical-desc-sickly
   flavor: acid
   color: "#b5e36d"
-  # worksOnTheDead: true # Offbrand
+  worksOnTheDead: true # Offbrand # WL-Changes: Return worksOnTheDead
   metabolisms:
     Medicine:
       effects:
