Revert "Offmed hotfix (#412)"
This reverts commit e14ab40720377b540f5d85983df163fd939f4e5a.

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -2078,7 +2078,7 @@
   physicalDesc: reagent-physical-desc-sickly
   flavor: acid
   color: "#b5e36d"
-  worksOnTheDead: true # Offbrand # WL-Changes: Return worksOnTheDead
+  # worksOnTheDead: true # Offbrand
   metabolisms:
     Medicine:
       effects:
