--- a/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/slime_fox_parts.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/slime_fox_parts.yml
@@ -3,7 +3,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [SlimePerson]
-  sponsorOnly: true # Corvax-Sponsors
+  sponsorOnly: false # WL-Changes: Pill from greed # Corvax-Sponsors
   sprites:
   - sprite: Corvax/Mobs/Customization/slime_fox_parts.rsi
     state: ears_slime_fox_outer
