--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/grille.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/grille.yml
@@ -10,7 +10,8 @@
     - type: RandomSpawner
       prototypes:
         - Grille
-        - GrilleBroken
+        #Corvax-WL Changes - GrilleBroken
+        - ClockworkGrille #Corvax-WL Changes
       chance: 1.0
   placement:
     mode: AlignTileAny
